kubernetes/apps/default/onlyflans/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onlyflans
  annotations:
    gatus.home-operations.com/endpoint: |
      group: default
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "OnlyFlans"
    gethomepage.dev/group: "Fun"
    gethomepage.dev/icon: "mdi-food"
    gethomepage.dev/description: "🍮 Flan content only"
spec:
  hostnames: ["onlyflans.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: onlyflans
          port: 8080
